extract UserRegistrationService bug - 2 requests to db

--- a/src/main/resources/templates/unauth-header.html
+++ b/src/main/resources/templates/unauth-header.html
@@ -22,7 +22,7 @@
 
         <!-- Login / Signup -->
         <div class="d-flex w-auto">
-            <form class="me-2" th:action="@{/login}" th:method="get">
+            <form class="me-2" th:action="@{/log}" th:method="get">
                 <button type="submit" class="btn text-bg-primary">Login</button>
             </form>
 
