--- a/src/main/resources/templates/unauth-header.html
+++ b/src/main/resources/templates/unauth-header.html
@@ -13,7 +13,7 @@
     <title>Cloud Storage</title>
 </head>
 <body>
-<nav class="navbar navbar-light fixed-top bg-body-tertiary">
+<nav class="navbar navbar-static-top navbar-light fixed-top bg-body-tertiary">
     <div class="container-fluid ms-4">
         <a class="navbar-brand" th:href="@{/}"><img src="/images/icon.jpg" alt="icon" class="img-thumbnail icon"></a>
 
@@ -22,7 +22,7 @@
 
         <!-- Login / Signup -->
         <div class="d-flex w-auto">
-            <form class="me-2" th:action="@{/log}" th:method="get">
+            <form class="me-2" th:action="@{/login}" th:method="get">
                 <button type="submit" class="btn text-bg-primary">Login</button>
             </form>
 
