--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -20,7 +20,7 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-<form th:action="@{/login}" method="post">
+<form th:action="@{/login}" th:method="post">
     <div>
         <input type="text" name="username" placeholder="Username"/>
     </div>
