--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -13,6 +13,7 @@
     <title>Cloud Storage</title>
 </head>
 <body>
+<div th:insert="~{fragments/not-auth :: header}"></div>
 <h1>Please Log In</h1>
 <div th:if="${param.error}">
     Invalid credentials.
@@ -22,7 +23,7 @@
 </div>
 <form th:action="@{/login}" th:method="post">
     <div>
-        <input type="text" name="username" placeholder="Username"/>
+        <input type="text" name="username" placeholder="Username" autofocus="autofocus"/>
     </div>
     <div>
         <input type="password" name="password" placeholder="Password"/>
