--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -13,6 +13,7 @@
     <title>Cloud Storage</title>
 </head>
 <body>
+<div th:insert="fragments/not-auth :: header"></div>
 <h1>Please Signup</h1>
 <div th:if="${errorMessage}">
     <p th:text="${errorMessage}">Error message</p>
@@ -22,7 +23,7 @@
 </div>
 <form th:action="@{/signup}" th:method="post" th:object="${user}">
     <div>
-        <input type="text" th:field="*{username}" name="username" placeholder="Username"/>
+        <input type="text" th:field="*{username}" name="username" placeholder="Username" autofocus="autofocus"/>
     </div>
     <div>
         <input type="password" th:field="*{password}" name="password" placeholder="Password"/>
