--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
 <div sec:authorize="isAuthenticated()">
     <div th:insert="~{fragments/auth :: header}"></div>
     <div th:insert="~{fragments/auth :: content}"></div>
+    <div th:insert="~{fragments/auth :: breadcrumb}"></div>
 </div>
 <div sec:authorize="isAnonymous()">
     <div th:insert="~{fragments/not-auth :: header}"></div>
