--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -62,28 +62,43 @@
                                     <div th:unless="${wrapper.getItem().isDir()}">
                                         <div class="row">
                                             <div class="col">
-                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Rename</button>
+                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                        data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">
+                                                    Rename
+                                                </button>
 
-                                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal fade" id="exampleModal" tabindex="-1"
+                                                     aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
-                                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Rename</h1>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                                                                    Rename</h1>
+                                                                <button type="button" class="btn-close"
+                                                                        data-bs-dismiss="modal"
+                                                                        aria-label="Close"></button>
                                                             </div>
                                                             <div class="modal-body">
                                                                 <form method="post" th:action="@{/rename}">
                                                                     <div class="mb-3">
-                                                                        <label for="oldName" class="col-form-label">Old name:</label>
-                                                                        <input type="text" class="form-control" id="oldName" name="oldName"
-                                                                               th:placeholder="${wrapper.getName()}" th:value="${wrapper.getUrl()}">
+                                                                        <label for="oldName" class="col-form-label">Old
+                                                                            name:</label>
+                                                                        <input type="text" class="form-control"
+                                                                               id="oldName" name="oldName"
+                                                                               th:placeholder="${wrapper.getName()}"
+                                                                               th:value="${wrapper.getUrl()}">
                                                                     </div>
                                                                     <div class="mb-3">
-                                                                        <label for="newName" class="col-form-label">New name:</label>
-                                                                        <input class="form-control" id="newName" name="newName">
+                                                                        <label for="newName" class="col-form-label">New
+                                                                            name:</label>
+                                                                        <input class="form-control" id="newName"
+                                                                               name="newName">
                                                                     </div>
-                                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                                    <button type="submit" class="btn btn-primary">Ok</button>
+                                                                    <button type="button" class="btn btn-secondary"
+                                                                            data-bs-dismiss="modal">Close
+                                                                    </button>
+                                                                    <button type="submit" class="btn btn-primary">Ok
+                                                                    </button>
                                                                 </form>
                                                             </div>
                                                         </div>
@@ -107,6 +122,24 @@
         </div>
     </div>
 </div>
+
+<div th:fragment="upload">
+    <div class="container">
+        <div class="input-group mb-3">
+            <form class="form-control-lg" method="post" action="#" th:action="@{/upload}" enctype="multipart/form-data">
+                <input type="hidden" name="path" th:value="${param.path}">
+                <input type="file" name="file" class="form-control" id="inputGroupFile02">
+                <input type="reset" class="input-group">Reset</input>
+                <input type="submit" class="input-group">Upload</input>
+            </form>
+        </div>
+        <div class="drop-zone">
+            <span class="drop-zone__prompt">Drop file here or click to upload</span>
+            <input type="file" name="myFile" class="drop-zone__input">
+        </div>
+    </div>
+</div>
+
 <div th:fragment="breadcrumb">
     <div class="container">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
