--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -129,7 +129,7 @@
             <form class="form-control-lg" method="post" action="#" th:action="@{/upload}" enctype="multipart/form-data">
                 <input type="hidden" name="path" th:value="${param.path}">
                 <input type="file" name="file" class="form-control" id="inputGroupFile02">
-                <input type="reset" class="input-group">Reset</input>
+                <input type="reset" class="input">Reset</input>
                 <input type="submit" class="input-group">Upload</input>
             </form>
         </div>
