--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -19,9 +19,10 @@
             <a class="navbar-brand" href="/"><img src="/images/icon.jpg" alt="icon"
                                                   class="img-thumbnail icon"></a>
             <!-- Search -->
-            <form class="d-flex input-group w-auto" method="get" action="#">
+            <form class="d-flex input-group w-auto" method="get" action="#" th:action="@{/search}">
                 <input
                         type="search"
+                        name="searchQuery"
                         class="form-control"
                         placeholder="Search"
                         aria-label="Search"
@@ -156,6 +157,41 @@
                 </th:block>
             </ol>
         </nav>
+    </div>
+</div>
+
+<div th:fragment="searchContent">
+    <div class="container">
+        <div class="row">
+            <tr th:each="wrapper : ${searchResult}">
+                <div class="col-md-3">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex gap-3">
+                                <div class="object-image">
+                                    <i class="bi bi-folder text-warning fs-1" th:if="${wrapper.getItem().isDir()}"></i>
+                                    <i class="bi bi-file-earmark text-info fs-1"
+                                       th:unless="${wrapper.getItem().isDir()}"></i>
+                                </div>
+                                <div class="object-info">
+                                    <h5 th:text="${wrapper.getName()}">Object name</h5>
+                                    <div th:if="${wrapper.getItem().isDir()}">
+                                        <a class="btn btn-primary" th:href="@{/(path=${wrapper.getUrl()})}">Open</a>
+                                    </div>
+                                    <div th:unless="${wrapper.getItem().isDir()}">
+                                        <div class="row">
+                                            <div class="col">
+                                                <a class="btn btn-warning" th:href="@{/(path=${wrapper.getUrl()})}">Open in folder</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </tr>
+        </div>
     </div>
 </div>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
