--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -181,7 +181,8 @@
                                     <div th:unless="${wrapper.getItem().isDir()}">
                                         <div class="row">
                                             <div class="col">
-                                                <a class="btn btn-warning" th:href="@{/(path=${wrapper.getUrl()})}">Open in folder</a>
+                                                <a class="btn btn-warning" th:href="@{/(path=${wrapper.getUrl()})}">Open
+                                                    in folder</a>
                                             </div>
                                         </div>
                                     </div>
@@ -194,6 +195,41 @@
         </div>
     </div>
 </div>
+
+<div th:fragment="createFolder">
+    <div class="container">
+        <button class="btn btn-primary mb-1" data-bs-toggle="modal"
+                data-bs-target="#createModal" data-bs-whatever="@getbootstrap">
+            <i class="bi bi-folder-plus fs-4"></i>
+        </button>
+
+        <div class="modal fade" id="createModal" tabindex="-1"
+             aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="createModalLabel">
+                            Enter folder name</h1>
+                        <button type="button" class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="get" th:action="@{/}">
+                            <div class="mb-3">
+                                <label for="folderName" class="col-form-label">Folder name</label>
+                                <input class="form-control" id="folderName" name="path" th:value="${param.path}">
+                            </div>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Create</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
