--- a/src/main/resources/templates/fragments/auth.html
+++ b/src/main/resources/templates/fragments/auth.html
@@ -45,22 +45,24 @@
 <div th:fragment="content">
     <div class="container">
         <div class="row">
-            <tr th:each="wrapper : ${items}">
+            <tr th:each="item : ${items}">
                 <div class="col-md-3">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="d-flex gap-3">
                                 <div class="object-image">
-                                    <i class="bi bi-folder text-warning fs-1" th:if="${wrapper.getItem().isDir()}"></i>
+                                    <i class="bi bi-folder text-warning fs-1" th:if="${item.getItem().isDir()}"></i>
                                     <i class="bi bi-file-earmark text-info fs-1"
-                                       th:unless="${wrapper.getItem().isDir()}"></i>
+                                       th:unless="${item.getItem().isDir()}"></i>
                                 </div>
                                 <div class="object-info">
-                                    <h5 th:text="${wrapper.getName()}">Object name</h5>
-                                    <div th:if="${wrapper.getItem().isDir()}">
-                                        <a class="btn btn-primary" th:href="@{/(path=${wrapper.getUrl()})}">Open</a>
+                                    <h5 th:text="${item.getName()}">Object name</h5>
+
+                                    <div th:if="${item.getItem().isDir()}">
+                                        <a class="btn btn-primary" th:href="@{/(path=${item.getUrl()})}">Open</a>
                                     </div>
-                                    <div th:unless="${wrapper.getItem().isDir()}">
+
+                                    <div th:unless="${item.getItem().isDir()}">
                                         <div class="row">
                                             <div class="col">
                                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -84,10 +86,12 @@
                                                                     <div class="mb-3">
                                                                         <label for="oldName" class="col-form-label">Old
                                                                             name:</label>
-                                                                        <input type="hidden" class="form-control"
-                                                                               id="oldName" name="oldName"
-                                                                               th:placeholder="${wrapper.getName()}"
-                                                                               th:value="${wrapper.getUrl()}">
+                                                                        <input class="form-control"
+                                                                               id="oldName"
+                                                                               name="oldName"
+                                                                               th:placeholder="${item.getName()}"
+                                                                               th:value="${item.getUrl()}"
+                                                                        >
                                                                     </div>
                                                                     <div class="mb-3">
                                                                         <label for="newName" class="col-form-label">New
@@ -108,7 +112,7 @@
                                             </div>
                                             <div class="col">
                                                 <form class="form" method="post"
-                                                      th:action="@{/delete(query=${wrapper.getUrl()})}">
+                                                      th:action="@{/delete(query=${item.getUrl()})}">
                                                     <button class="btn btn-danger">Delete</button>
                                                 </form>
                                             </div>
@@ -165,25 +169,25 @@
 <div th:fragment="searchContent">
     <div class="container">
         <div class="row">
-            <tr th:each="wrapper : ${searchResult}">
+            <tr th:each="item : ${searchResult}">
                 <div class="col-md-3">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="d-flex gap-3">
                                 <div class="object-image">
-                                    <i class="bi bi-folder text-warning fs-1" th:if="${wrapper.getItem().isDir()}"></i>
+                                    <i class="bi bi-folder text-warning fs-1" th:if="${item.getItem().isDir()}"></i>
                                     <i class="bi bi-file-earmark text-info fs-1"
-                                       th:unless="${wrapper.getItem().isDir()}"></i>
+                                       th:unless="${item.getItem().isDir()}"></i>
                                 </div>
                                 <div class="object-info">
-                                    <h5 th:text="${wrapper.getName()}">Object name</h5>
-                                    <div th:if="${wrapper.getItem().isDir()}">
-                                        <a class="btn btn-primary" th:href="@{/(path=${wrapper.getUrl()})}">Open</a>
+                                    <h5 th:text="${item.getName()}">Object name</h5>
+                                    <div th:if="${item.getItem().isDir()}">
+                                        <a class="btn btn-primary" th:href="@{/(path=${item.getUrl()})}">Open</a>
                                     </div>
-                                    <div th:unless="${wrapper.getItem().isDir()}">
+                                    <div th:unless="${item.getItem().isDir()}">
                                         <div class="row">
                                             <div class="col">
-                                                <a class="btn btn-warning" th:href="@{/(path=${wrapper.getUrl()})}">Open
+                                                <a class="btn btn-warning" th:href="@{/(path=${item.getUrl()})}">Open
                                                     in folder</a>
                                             </div>
                                         </div>
